# case-nvidia

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tapi.md
data/gold/: build_gold.py  calibration.json  gold_set.json
data/nvidia_kb/: ai-5-layer-cake.md  ai-native-services.md  cuda.md  cudf.md  cuml.md  dynamo-triton.md  nemo-guardrails.md  nemotron.md  nvidia-ai-enterprise.md  nvidia-ai-stack-5-layer-cake.md  nvidia-api-catalog-dgx-cloud.md  nvidia-clara.md  nvidia-inception.md  nvidia-isaac.md  nvidia-morpheus.md  nvidia-nemo.md  nvidia-nim.md  nvidia-omniverse.md  nvidia-rapids.md  nvidia-riva.md  tensorrt-llm.md  triton-inference-server.md
docs/: CONTEXTO_E_DECISOES.md
frontend/: index.html
src/nvidia_radar/: __init__.py  cli.py  config.py  graph.py  llm.py  models.py  state.py
src/nvidia_radar/agents/: __init__.py  _common.py  briefing.py  classifier.py  evidence_validator.py  extractor.py  rag_agent.py  recommender.py  scraper.py  search_planner.py  wedge.py
src/nvidia_radar/api/: __init__.py  app.py
src/nvidia_radar/db/: __init__.py  store.py
src/nvidia_radar/eval/: calibrate.py  gold_eval.py
src/nvidia_radar/rag/: __init__.py  bm25.py  embeddings.py  ingest.py  pipeline.py  reranker.py  vectorstore.py
src/nvidia_radar/scoring/: aims.py  cds.py  confidence.py  engine.py  features.py  ipi.py  leverage.py
src/nvidia_radar/scraping/: __init__.py  fetch.py  search.py
src/nvidia_radar/signals/: connectors.py
src/nvidia_radar/web/: index.html  map_data.js  map_data.json
tests/: test_core.py
