[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-startup-ai-radar"
version = "1.0.0"
description = "Multi-agent platform to discover, score and recommend NVIDIA tech for Brazilian AI-native startups"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ddgs>=6.0",
    "tenacity>=9.0",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "rank-bm25>=0.2.2",
    "cohere>=5.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "rich>=13.9",
]

[project.scripts]
radar = "nvidia_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nvidia_radar = ["py.typed"]
