[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-startup-ai-radar"
version = "0.2.0"
description = "NVIDIA Startup AI Radar — encontra a startup onde a NVIDIA muda o desfecho (tese do Ponto de Alavancagem)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Educational (case NVIDIA / Inteli)" }
authors = [{ name = "Guilherme Marques" }]

# O NÚCLEO (scoring determinístico, gold eval, IPI, mapa) roda só com stdlib.
# Tudo abaixo é OPCIONAL e habilita camadas extras (LLM, RAG, API). Degradação graciosa.
dependencies = []

[project.optional-dependencies]
llm   = ["httpx>=0.27"]
rag   = ["qdrant-client>=1.9", "fastembed>=0.3", "rank-bm25>=0.2"]
graph = ["langgraph>=0.2", "langchain-core>=0.3"]
api   = ["fastapi>=0.110", "uvicorn>=0.29"]
scrape= ["trafilatura>=1.8", "beautifulsoup4>=4.12", "httpx>=0.27"]
all   = ["httpx>=0.27","qdrant-client>=1.9","fastembed>=0.3","rank-bm25>=0.2",
         "langgraph>=0.2","langchain-core>=0.3","fastapi>=0.110","uvicorn>=0.29",
         "trafilatura>=1.8","beautifulsoup4>=4.12"]
dev   = ["pytest>=8.0"]

[project.scripts]
radar = "nvidia_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nvidia_radar = ["web/*.html", "web/*.js", "web/*.css"]
